# muddle-run

./: .env.example  .gitignore  .rustfmt.toml  .terraform.lock.hcl  Cargo.toml  README.md  module.tf  mr-server-fleet.yaml  mr-server.yaml  mr_matchmaker.dockerfile  mr_persistence.dockerfile  mr_server.dockerfile  mr_web_client.dockerfile  mr_web_client.nginx.conf  wasm-pack.dockerfile
.cargo/: config.toml
.fleet/: run.json
.github/workflows/: build.yml  check.yml
.run/: Check mr_desktop_client.run.xml  Check mr_matchmaker.run.xml  Check mr_persistence.run.xml  Check mr_server.run.xml  Check mr_web_client.run.xml  Check unstoppable_resolution.run.xml  Run mr_desktop_client (matchmaker).run.xml  Run mr_desktop_client.run.xml  Run mr_matchmaker.run.xml  Run mr_persistence.run.xml  Run mr_server.run.xml  Serve (muddle.run).run.xml  Serve (windows, muddle.run).run.xml  wasm-pack (muddle.run).run.xml  wasm-pack (windows, muddle.run).run.xml
bins/desktop_client/: Cargo.toml
bins/desktop_client/src/: main.rs
bins/matchmaker/: Cargo.toml
bins/matchmaker/src/: game_server_allocation.rs  jwks.rs  main.rs  persistence.rs
bins/persistence/: Cargo.toml  build.rs  sqlx-data.json
bins/persistence/migrations/: 20211226174039_create_users_table.down.sql  20211226174039_create_users_table.up.sql  20220319165055_create_level_table.down.sql  20220319165055_create_level_table.up.sql
bins/persistence/src/: main.rs
bins/persistence/src/private/: mod.rs
bins/persistence/src/public/: mod.rs
bins/sandbox/: Cargo.toml
bins/sandbox/src/: main.rs
bins/sandbox/src/road/: mesh.rs  mod.rs  systems.rs
bins/server/: Cargo.toml  build.rs
bins/server/src/: main.rs
bins/web_client/: Cargo.toml  README.md  index.html  package.json  webpack.config.js
bins/web_client/auth/: index.html
bins/web_client/src/: lib.rs
bins/web_client/static/: index.html
k8s/: cluster-role.yaml  mr-matchmaker-service.yaml  mr-matchmaker.yaml  mr-server-allocation.yaml  mr-server-fleet.yaml  mr-server.yaml
k8s/agones/: cluster_role.tf  mr_server_fleet.tf
k8s/aws_autoscaler/: module.tf
k8s/aws_load_balancer_controller/: module.tf
k8s/eks_cluster/: module.tf
k8s/matchmaker/: cluster_role.tf  module.tf
k8s/persistence/: db.tf  module.tf
k8s/route53/: module.tf
k8s/service/: module.tf
k8s/web_client/: module.tf
libs/build_dotenv/: Cargo.toml
libs/build_dotenv/src/: lib.rs
libs/client_lib/: Cargo.toml
libs/client_lib/src/: camera.rs  components.rs  config_storage.rs  game_events.rs  helpers.rs  init_app_systems.rs  input.rs  lib.rs  net.rs  spawners.rs  visuals.rs
libs/client_lib/src/net/: auth.rs  listen_local_storage.rs  matchmaker.rs  mod.rs  persistence.rs  redirect_uri_server.rs
libs/client_lib/src/plugins/: logging.rs
libs/client_lib/src/ui/: builder_ui.rs  debug_ui.rs  help_ui.rs  main_menu_ui.rs  matchmaker_ui.rs  mod.rs  overlay_ui.rs  player_ui.rs  side_panel.rs
libs/client_lib/src/ui/widgets/: list_menu.rs  logs_viewer.rs  mod.rs  sortable.rs
libs/client_lib/src/utils/: mod.rs
libs/client_lib/src/websocket/: mod.rs  tungstenite.rs  wasm.rs
libs/client_shared/: Cargo.toml
libs/client_shared/src/: bevy_megaui.rs  lib.rs  megaui.frag  megaui.vert  texture_node.rs  transform_node.rs
libs/client_shared/src/ui/: debug_ui.rs
libs/docker_dummy/: Cargo.toml
libs/docker_dummy/src/: lib.rs
libs/messages_lib/: Cargo.toml
libs/messages_lib/src/: lib.rs  matchmaker.rs
libs/messages_lib/src/persistence/: levels.rs  mod.rs  users.rs
libs/server_lib/: Cargo.toml
libs/server_lib/src/: game_events.rs  kube_discovery.rs  lib.rs  net.rs  persistence.rs  player_updates.rs
libs/shared_lib/: Cargo.toml
libs/shared_lib/src/: collider_flags.rs  framebuffer.rs  lib.rs  looped_counter.rs  messages.rs  net.rs  player.rs  registry.rs  util.rs  wrapped_counter.rs
libs/shared_lib/src/client/: assets.rs  components.rs  materials.rs  mod.rs
libs/shared_lib/src/game/: client_factories.rs  collisions.rs  commands.rs  components.rs  events.rs  level.rs  level_objects.rs  mod.rs  movement.rs  spawn.rs
libs/shared_lib/src/server/: level_spawn_location_service.rs  mod.rs
libs/unstoppable_resolution/: Cargo.toml
libs/unstoppable_resolution/src/: lib.rs  namehash.rs
libs/unstoppable_resolution/src/providers/: mod.rs  uns.rs
libs/utils_lib/: Cargo.toml
libs/utils_lib/src/: env.rs  jwks.rs  kube_discovery.rs  lib.rs
