[package]
name = "mr_desktop_client"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ud-login = ["mr_client_lib/ud-login"]

[dependencies]
mr_client_lib = { path = "../../libs/client_lib", features = ["use-udp", "profiler"] }

bevy = "0.6"
sentry = "0.23.0"
