[package]
name = "mr_desktop_client"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr_client_lib = { path = "../../libs/client_lib", features = ["use-udp", "profiler"] }
mr_utils_lib = { path = "../../libs/utils_lib", features = ["bevy_logging"] }

bevy = { version = "0.7" }
sentry = "0.26.0"
bevy_puffin = "0.1.0"

[build-dependencies]
mr_build_dotenv = { path = "../../libs/build_dotenv" }
