[package]
name = "mr_persistence"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr_messages_lib = { path = "../../libs/messages_lib" }
mr_utils_lib = { path = "../../libs/utils_lib", features = ["jwks"] }

actix-web = "4.0.0-beta.15"
anyhow = "1.0.47"
bincode = "1.3.3"
env_logger = "0.8.1"
futures = "0.3.17"
headers = "0.3.5"
jsonwebtoken = "8.0.0-beta.7"
log = "0.4.14"
reqwest = { version = "0.11.8", features = ["json"] }
sentry = "0.23.0"
serde = "1.0.68"
serde_derive = "1.0.79"
serde_json = "1.0.73"
sqlx = { version = "0.5.9", features = ["runtime-actix-native-tls", "postgres", "chrono"] }
tokio = "1.15.0"
