[package]
name = "mr_persistence"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr_messages_lib = { path = "../../libs/messages_lib" }
mr_utils_lib = { path = "../../libs/utils_lib", features = ["jwks"] }

actix-web = "4.0.1"
actix-cors = "0.6.1"
anyhow = "1.0.57"
env_logger = "0.9.0"
futures = "0.3.19"
headers = "0.3.5"
jwt-compact = { version = "0.5.0", features = ["std", "clock", "with_rsa"], default-features = false }
log = "0.4.17"
reqwest = { version = "0.11.9", features = ["json"] }
sentry = "0.26.0"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.81"
sqlx = { version = "0.5.10", features = ["runtime-actix-native-tls", "postgres", "chrono", "offline", "json"] }
tokio = "1.18.2"

[build-dependencies]
mr_build_dotenv = { path = "../../libs/build_dotenv" }
