[package]
name = "mr_server"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-udp = ["mr_server_lib/use-udp"]
use-webrtc = ["mr_server_lib/use-webrtc"]

[dependencies]
mr_server_lib = { path = "../../libs/server_lib" }

bevy = { version = "0.6", default-features = false }
rymder = { version = "0.3.0", features = ["player-tracking"] }
sentry = "0.23.0"
tokio = { version = "1.15.0", features = ["sync"] }
