[package]
name = "mr_server"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
mr_server_lib = { path = "../../libs/server_lib" }
mr_utils_lib = { path = "../../libs/utils_lib", features = ["bevy_logging"] }

bevy = { version = "0.10", default-features = false }
rymder = { version = "0.6.0", features = ["player-tracking"] }
sentry = "0.29.1"
tokio = { version = "1.24", features = ["sync"] }

[build-dependencies]
mr_build_dotenv = { path = "../../libs/build_dotenv" }
