[package]
name = "mr_web_client"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"
description = "muddle.run web client"
license-file = "../../LICENSE"
repository = "https://github.com/mvlabat/muddle-run"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr_client_lib = { path = "../../libs/client_lib", features = ["use-webrtc"]  }

bevy_webgl2 = "0.5"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.11"
uuid = "=0.8.1"
wasm-bindgen = "0.2.69"

[dependencies.bevy]
version = "0.5"
default-features = false
features = [
    "x11",
    "bevy_winit",
    "render",
]

[dependencies.web-sys]
version = "0.3.45"
features = [
    "CssStyleDeclaration",
    "Document",
    "HtmlCollection",
    "Window",
]
