[package]
name = "mr_web_client"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"
description = "muddle.run web client"
license-file = "../../LICENSE"
repository = "https://github.com/mvlabat/muddle-run"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr_client_lib = { path = "../../libs/client_lib", features = ["web", "use-webrtc"] }
mr_utils_lib = { path = "../../libs/utils_lib", features = ["bevy_logging"] }

bevy = "0.6"
console_error_panic_hook = "0.1.7"
log = "0.4.14"
uuid = "1.0.0"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "CssStyleDeclaration",
    "Document",
    "HtmlCollection",
    "Window",
]

[build-dependencies]
mr_build_dotenv = { path = "../../libs/build_dotenv" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
