[package]
name = "mr_client_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-udp = ["bevy_networking_turbulence/use-udp"]
use-webrtc = ["bevy_networking_turbulence/use-webrtc"]
web = ["mr_shared_lib/web", "chrono/wasmbind"]
profiler = ["puffin", "puffin_egui", "mr_shared_lib/profiler"]

[dependencies]
anyhow = "1.0.57"
base64 = "0.20.0-alpha.1"
bevy = "0.7"
bevy_egui = "0.14"
bevy-inspector-egui = "0.11.0"
bevy-inspector-egui-rapier = { version = "0.3.0", features = ["rapier2d"] }
bevy_mod_picking = { version = "0.7.0" }
bevy_networking_turbulence = { version = "0.4", default-features = false }
bevy_rapier2d = { version = "0.14", features = ["wasm-bindgen"] }
chrono = "0.4.19"
futures = "0.3.19"
jwt-compact = { version = "0.5.0", features = ["std", "clock", "with_rsa"], default-features = false }
puffin = { version = "0.13", optional = true }
puffin_egui = { version = "0.15", optional = true }
rand = "0.8.4"
rapier2d = "0.13.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.133"
serde_json = "1.0.81"
serde_urlencoded = "0.7.0"
sha2 = "0.10.1"
tokio = { version = "1.19.2", features = ["rt", "sync"] }
url = { version = "2.2.2", features = ["serde"] }
wasm-timer = "0.2.5"
webbrowser = "0.7.1"
whoami = "1.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = "0.5.0"
directories = "4.0.1"
hyper = { version = "0.14.19", features = ["full"] }
tokio-tungstenite = "0.17.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.31"
ws_stream_wasm = "0.7.3"
js-sys = "0.3.58"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "Location",
    "MessageEvent",
    "CloseEvent",
    "ProgressEvent",
    "Storage",
    "StorageEvent",
    "WebSocket",
]

[dependencies.mr_shared_lib]
version = "*"
path = "../shared_lib"
features = ["client"]

[dependencies.mr_messages_lib]
version = "*"
path = "../messages_lib"

[dependencies.mr_utils_lib]
version = "*"
path = "../utils_lib"
