[package]
name = "mr_client_shared"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier3d = { version = "0.5.0", features = ["wasm-bindgen"] }
log = "0.4.11"
env_logger = "0.8.1"
megaui = "0.2.14"

[dependencies.bevy]
version = "0.3.0"
default-features = false
features = [
    "x11",
    "bevy_winit",
    "render",
]
