[package]
name = "mr_client_shared"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = { version = "0.1.0" }
bevy_rapier3d = { version = "0.7.0", features = ["wasm-bindgen"] }
env_logger = "0.8.1"

[dependencies.bevy]
version = "0.4"
default-features = false
features = [
    "x11",
    "bevy_winit",
    "render",
]
