[package]
name = "mr_messages_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
schemars = { version = "0.8.10", optional = true }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.13.0"
uuid = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
hex = "0.4.3"
serde_urlencoded = "0.7.1"
