[package]
name = "mr_server_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-udp = ["bevy_networking_turbulence/use-udp"]
use-webrtc = ["bevy_networking_turbulence/use-webrtc"]
profiler = ["puffin", "mr_shared_lib/profiler"]

[dependencies]
anyhow = { version = "1.0.57" }
bevy = { version = "0.7", default-features = false }
bevy_networking_turbulence = { version = "0.4", default-features = false }
bevy_rapier2d = "0.14"
jwt-compact = { version = "0.5.0", features = ["std", "clock", "with_rsa"], default-features = false }
kube = "0.71.0"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_20"] }
puffin = { version = "0.13", optional = true }
rand = "0.8.4"
rapier2d = "0.13.0"
reqwest = "0.11.11"
rymder = "0.5.0"
serde = "1.0.133"
serde_json = "1.0.81"
tokio = "1.19.2"
uuid = "0.8.2"

[dependencies.mr_messages_lib]
version = "*"
path = "../messages_lib"

[dependencies.mr_shared_lib]
version = "*"
path = "../shared_lib"

[dependencies.mr_utils_lib]
version = "*"
path = "../utils_lib"
features = ["bevy_logging", "jwks", "kube_discovery"]
