[package]
name = "mr_server_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
profiler = ["puffin", "mr_shared_lib/profiler"]

[dependencies]
anyhow = "1.0"
bevy = { version = "0.10", default-features = false }
bevy_disturbulence = { git = "https://github.com/mvlabat/bevy_disturbulence.git", branch = "wip", features = ["server"] }
bevy_rapier2d = "0.21"
jwt-compact = { version = "0.6", features = ["std", "clock", "with_rsa"], default-features = false }
kube = "0.77.0"
local-ip-address = "0.5"
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_23"] }
puffin = { version = "0.13", optional = true }
rand = "0.8.4"
rapier2d = "0.17"
reqwest = "0.11"
rymder = "0.6.0"
serde = "1.0"
serde_json = "1.0"
tokio = "1.24"
uuid = "1.2"

[dependencies.mr_messages_lib]
version = "*"
path = "../messages_lib"

[dependencies.mr_shared_lib]
version = "*"
path = "../shared_lib"

[dependencies.mr_utils_lib]
version = "*"
path = "../utils_lib"
features = ["bevy_logging", "jwks", "kube_discovery"]
