[package]
name = "mr_shared_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["bevy/render", "bevy_egui", "bevy_mod_picking"]
web = ["chrono/wasmbind"]
profiler = ["puffin"]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_egui = { version = "0.10", optional = true }
bevy_mod_picking = { version = "0.5.4", optional = true }
bevy_networking_turbulence = { version = "0.4", default-features = false }
bevy_rapier2d = { version = "0.12", features = ["wasm-bindgen", "serde-serialize"] }
bincode = "1.3.3"
chrono = "0.4.19"
crossbeam-channel = "0.5.2"
futures-lite = "1.12.0"
names = { version = "0.12.0", default-features = false }
num = "0.4.0"
puffin = { version = "0.12.1", optional = true }
rand = "0.8.4"
serde = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["sync"] }

[dev-dependencies]
bevy_networking_turbulence = { version = "0.4", features = ["use-udp"] } # for being able to run the tests
