[package]
name = "mr_shared_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["bevy/render", "bevy_egui", "bevy_mod_picking"]
web = ["chrono/wasmbind"]
profiler = ["puffin", "bevy/trace"]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_egui = { version = "0.14", optional = true }
bevy_mod_picking = { version = "0.6.1", optional = true }
bevy_networking_turbulence = { version = "0.4", default-features = false }
bevy_rapier2d = { version = "0.14", features = ["wasm-bindgen", "serde-serialize"] }
chrono = "0.4.19"
crossbeam-channel = "0.5.2"
futures-lite = "1.12.0"
konst = "0.2.13"
names = { version = "0.13.0", default-features = false }
num = "0.4.0"
puffin = { version = "0.13", optional = true }
rand = "0.8.4"
serde = "1.0.133"
serde_json = "1.0.81"
thiserror = "1.0.30"
tokio = { version = "1.18.0", features = ["sync"] }

[dev-dependencies]
bevy_networking_turbulence = { version = "0.4", features = ["use-udp"] } # for being able to run the tests
