[package]
name = "mr_shared_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["bevy/bevy_render", "bevy_egui", "bevy_mod_picking"]
web = ["chrono/wasmbind"]
profiler = ["puffin", "bevy/trace"]

[dependencies]
bevy = { version = "0.9.1", default-features = false }
bevy_egui = { version = "0.18", optional = true }
bevy_mod_picking = { version = "0.11", optional = true }
bevy_disturbulence = { git = "https://github.com/mvlabat/bevy_disturbulence.git", branch = "wip" }
bevy_rapier2d = { version = "0.19", features = ["wasm-bindgen", "serde-serialize"] }
rapier2d = "0.16.1"
chrono = "0.4.19"
crossbeam-channel = "0.5.5"
futures-lite = "1.12.0"
konst = "0.2.13"
names = { version = "0.14.0", default-features = false }
num = "0.4.0"
puffin = { version = "0.13", optional = true }
rand = "0.8.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
tokio = { version = "1.21", features = ["sync"] }

[dev-dependencies]
bevy_disturbulence = { git = "https://github.com/mvlabat/bevy_disturbulence.git", branch = "wip", features = ["server"] } # for being able to run the tests
