[package]
name = "unstoppable_resolution"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
ethabi = "15.0.0"
ethereum-types = "0.12.1"
hex = "0.4.3"
http = "0.2.1"
reqwest = { version = "0.11.8", features = ["json"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.72"
sha3 = "0.10.0"
snafu = "0.6.10"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
