[package]
name = "unstoppable_resolution"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
ethabi = "16.0.0"
ethereum-types = "0.12.1"
hex = "0.4.3"
http = "0.2.6"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
sha3 = "0.10.0"
snafu = "0.7.0"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
