[package]
name = "mr_utils_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

[features]
jwks = ["anyhow", "headers", "jwt-compact", "reqwest", "tokio"]
bevy_logging = ["bevy"]

[dependencies]
anyhow = { version = "1.0.52", optional = true }
bevy = { version = "0.5.0", optional = true, default-features = false }
headers = { version = "0.3.5", optional = true }
jwt-compact = { version = "0.5.0", optional = true, features = ["std", "clock", "with_rsa"], default-features = false }
log = "0.4.14"
reqwest = { version = "0.11.8", optional = true }
serde = "1.0.133"
tokio = { version = "1.15.0", optional = true }
