[package]
name = "mr_utils_lib"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2021"

[features]
bevy_logging = ["bevy"]
kube_discovery = ["kube", "k8s-openapi", "reqwest"]
jwks = ["anyhow", "headers", "jwt-compact", "reqwest", "tokio"]

[dependencies]
anyhow = { version = "1.0", optional = true }
bevy = { version = "0.9.1", optional = true, default-features = false }
dotenv = "0.15.0"
headers = { version = "0.3.5", optional = true }
jwt-compact = { version = "0.6", optional = true, features = ["std", "clock", "with_rsa"], default-features = false }
kube = { version = "0.78.0", optional = true }
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_23"], optional = true }
log = "0.4.17"
reqwest = { version = "0.11.11", optional = true }
serde = "1.0"
tokio = { version = "1.21", optional = true }
